№4 тестовая правка для сервера